k8s/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-canary
  namespace: ge-go-greeter
  labels:
    app: go-app
    version: canary
spec:
  selector:
    app: go-app
    version: canary
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
