k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: go-app
  namespace: ge-go-greeter
spec:
  parentRefs:
    - name: go-app-gateway
      namespace: ge-go-greeter
  rules:
    # A/B Testing: requests con header X-Version: canary van 100% al canary
    - matches:
        - headers:
            - name: X-Version
              value: abtest
      backendRefs:
        - name: go-app-canary
          port: 80
          weight: 100

    # Canary: trafico por defecto 80% stable / 20% canary
    - backendRefs:
        - name: go-app-stable
          port: 80
          weight: 80
        - name: go-app-canary
          port: 80
          weight: 20
